--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Acessibilidade web</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Acessibilidade</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css"
 </head>
 
 <body>
