--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <center>
   <ul>
     <br>
       <center>
@@ -41,7 +42,6 @@
       com autonomia.
   
     <br><br>
-  
           “Acessibilidade na web significa que pessoas 
           com deficiência podem usar a web. Mais 
           especificamente, a acessibilidade na web 
@@ -61,44 +61,44 @@
           As pessoas estão se sentido cada vez mais 
           confortáveis para realizar todo tipo de 
           atividade no mundo virtual. Por isso, muito 
-      <br>mais do que ter um design bonito e 
+          mais do que ter um design bonito e 
           atraente, os sites precisam atender a todos. 
           Quando uma página não está acessível, ela está    
-      <br>fechando as portas para milhões 
+          fechando as portas para milhões 
           de pessoas, indo contra o seu propósito – 
           que é atrair mais visitantes.
           Ou seja, não pensar em 
-      <br>acessibilidade pode ser sinônimo de       
+          acessibilidade pode ser sinônimo de       
           deixar dinheiro em cima da mesa. Vale 
           reforçar que hoje em dia já existem recursos 
           que 
-      <br>permitem criar sites bonitos,        
+          permitem criar sites bonitos,        
           funcionais e acessíveis ao mesmo tempo. Além do mais, 
           a acessibilidade pode melhorar o seu 
-      <br>rankeamento da sua página no Google, uma vez que o 
+          rankeamento da sua página no Google, uma vez que o 
           algoritmo do buscador reconhece essas 
           práticas e o enxerga com maior 
-      <br>relevância.
+          relevância.
   
-        Tendo isso em vista, desde 2016 a Lei 
-        Brasileira de inclusão (LBI) exige que todos os 
-        sites, públicos e privados, 
-      <br>estejam acessíveis. Mas infelizmente apenas 
+          Tendo isso em vista, desde 2016 a Lei 
+          Brasileira de inclusão (LBI) exige que todos os 
+          sites, públicos e privados, 
+          estejam acessíveis. Mas infelizmente apenas 
           1% deles seguem essa regra no Brasil. Diante 
           disso, ter um site acessível não é só 
-      <br>cumprir a lei, é ter um                  
+          cumprir a lei, é ter um                  
           diferencial competitivo. E as organizações 
           que saíram na frente nesse movimento já tem 
           sido
-      <br>reconhecidas. A Prefeitura de São Paulo, por 
+          reconhecidas. A Prefeitura de São Paulo, por 
           exemplo, lançou o seu Selo de Acessibilidade
           Digital justamente com esse 
-      <br>propósito e já tem ratificado sites de 
+          propósito e já tem ratificado sites de 
           empresas de todo o Brasil, como a
           Samsung.
   
           São motivos de sobra para pensar se no 
-      <br>assunto, não é mesmo?
+          assunto, não é mesmo?
       </p>
 
     <h2>
@@ -115,14 +115,23 @@
       <br><br><br>
       <strong>Lembrando que um site acessível é:</strong>
       <br>
-      <br><b>  -Perceptível:</b> As informações e interface são apresentadas de uma forma que possa ser percebida;<br>
-      <br><b>  -Operável:</b>A Interface e a navegação devem ser operáveis para todos os usuários;<br>
-      <br><b>  -Compreensível:</b>A informação deve ser apresentada de forma simples e compreensível;<br>
-      <br><b>  -Rubusto:</b>O conteúdo deve ser robusto de uma forma que possa maximizar sua compatibilidade com diferentes tipos de pessoas e tecnologias assistivas.<br><br>
-
-      Seguindo esses princípios não tem erro, seu site estará acessível para todos! Mas esse é só o primeiro passo, ainda há um bom caminho a ser percorrido. E nós vamos falar sobre algumas ferramentas bem simples que são uma mão na roda!
+      <br>    
+      -Perceptível: As informações e interface são apresentadas de uma forma que possa ser percebida;<br>
+      <br>    
+      -Operável: A Interface e a navegação devem ser operáveis para todos os usuários;
+      <br>
+      <br>    
+        -Compreensível: A informação deve ser apresentada de forma                 simples e compreensível;
+      <br>
+      <br>    
+        -Robusto:  O conteúdo deve ser robusto de uma forma que 
+         possa maximizar sua compatibilidade com diferentes tipos de               pessoas e tecnologias assistivas.
+      <br><br>
+      Seguindo esses princípios não tem erro, seu site estará acessível         para todos! Mas esse é só o primeiro passo, ainda há um bom caminho       a ser percorrido. E nós vamos falar sobre algumas ferramentas bem         simples que são uma mão na roda!
     </p>
+    <br><br><br>
   </ul>
+  </center>
  </body>
 
 </html>
